# CyberAttackMap

./: .gitignore  README.md  hello.py  pyproject.toml
backend/backend/: settings.py
conf/: asgi.py  settings.py  urls.py
cyberattackmap/: apps.py  consumer.py  generate_attacks.py  models.py  routing.py  urls.py  views.py
cyberattackmap/migrations/: 0001_initial.py  0002_delete_cyberattacktype.py
cyberattackmap/templates/cyberattackmap/: index.html
static/css/: styles.css
static/js/: map.js
static/staticcss/: style.css
static/staticjs/: globe.js
