[project]
name = "cyberattackmap"
version = "0.1.0"
description = "A 2D visualization of cyber attacks that happen."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "django>=5.2",
    "django-channels>=0.7.0",
    "django-cors-headers >= 4.7.0",
    "python-dotenv>=1.1.0",
]
